as a user, I should be able to communicate back and forth with another user about a posting (#3)
#3 allow users to communicate between themselves
